Outliner Text Overlap #105388
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#105388
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.18
Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-01 23:48, hash:
6b8cdd597996
Worked: (newest version of Blender that worked as expected)
Short description of error
"P" and "I" letter overlap
Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Your screenshot appears to show uppercase "P" and lowercase "i" overlapping, but I'm not seeing the same thing with default font, default interface scale, and default preferences.
Your capture is shown above, while what I see with all defaults is below:
I'm also not seeing what you have captured with Hinting set to None, Slight, or Full. Or turning off antialiasing.
Have you changed the font or made any other text-related changes?
Ok here is something interesting, so add a cube, name it Pillar, then move the cube, then the font overlaps, notice it when you move the cube
Yes, I see that. Thanks. Weird that it changes on move. Will investigate, but it is probably to do with us turning off kerning for our default font.
Definitely an issue for me here. The long story...
We didn't have kerning working for a while, but that was fixed in 3.0 or so. But then in 3.1 while updating our font for a new language someone accidentally deleted its 'kern' table. I noticed that during 3.4 and fixed it.
But having kerning working again after that break caused bug reports on the differing placement - people were finding some pairs far too close, which is an issue with that font. So we disabled kerning for our default font in 3.4
What you are seeing is interesting. That initial "Pillar" where the "P" and "i" don't touch is how that font is meant to show that word at that size without kerning. This is what we want and obviously the better result.
But when you move the object and it changes to show the "P" and "i" touching. That is what this font looks like for that word at that size when kerning is enabled. Illustrating the reason why we disabled kerning for that font. At that point our text output is using the font's kern table even though I thought I had disabled it (by clearing its FT_FACE_FLAG_KERNING face flag). So there is some problem there, probably something dumb I have done.
This might be caused by slightly improved behavior by FreeType 2.12.1
We are using the FreeType caching submodule, with settings that are quite constrained.
We are currently only allowing 4 faces to be used and loaded by FreeType at a time (BLF_CACHE_MAX_FACES). That is a bit mean but it is nice to have this at a setting where we can see these kinds of errors, since we haven't been using the cache system for long. If this were set to some large amount it might hide errors that only become visible when users use a lot of fonts at once.
With this set to 4, we initially load the main font, then the mono font twice, for a total of three. You change the name to "Pillar" and it looks normal. But then you select "G" and move and we need to find the fonts that contains some of the characters shown in the statusbar, like the arrows. This causes us to look through our font stack, guessing where they might be. We guess well and only look in NotoEmoji, NotoSansSymbols, and NotoSansSymbols2. But this causes or default font to unload since we are over 4, and when it is reloaded the flag that I tried to disable is reenabled.
Before submitting a PR I'll do a quick check to see that all three loaded fonts were needed to be. Not that it matters much but a good opportunity to check the tuning.
I don't know if these long texts are meant for me or the developers, but I'm not a programmer, sorry to disappoint you if it was meant for me :D, but I have faith that you'll figure it out 💪, thanks for the effort
Notes to self, really. I forgot that you will also get annoying notifications about them.