Fix #105388: Default Font Accidentally Kerning

Move the code that disables kerning for the default font so it can't be
re-enabled by the cache subsystem.

Pull Request #105415